--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-server:
-  port: 6666
 eureka:
   client:
     register-with-eureka: true
@@ -10,12 +8,17 @@ eureka:
 spring:
   application:
     name: USER-SERVICE
+  profiles:
+    active: dev
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres?serverTimezone=Asia/Shanghai
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
 
+ribbon:
+  eureka:
+    enable: true
 mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
