--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 allprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
+    apply plugin: 'jacoco'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     //apply plugin: 'org.flywaydb.flyway'
@@ -25,6 +26,7 @@ allprojects {
 
     repositories {
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
     }
 
@@ -37,4 +39,13 @@ allprojects {
             mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
     }
+
+    jacocoTestReport {
+        reports {
+            xml.enabled false
+            html.enabled true
+        }
+    }
+
+    check.dependsOn jacocoTestReport
 }
