--- a/email/src/main/resources/application.yml
+++ b/email/src/main/resources/application.yml
@@ -6,7 +6,24 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka/
+  instance:
+    instance-id: email-service #自定义服务名称信息
+    prefer-ip-address: false     #访问路径可以显示IP地址
 
 spring:
   application:
     name: EMAIL-SERVICE
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+    health:
+      show-details: always
+
+info:
+  app.name: email
+  company.name: yong.huang1@thoughtworks.com
+  build.artifactId: $allprojects.artifactId$
+  build.version: $allprojects.version$
