--- a/user/build.gradle
+++ b/user/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'com.github.pagehelper:pagehelper:5.1.4'
     implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.2.10'
     implementation 'com.alibaba:fastjson:1.2.76'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
