--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.4.RELEASE'
+        springBootVersion = '2.1.4.RELEASE'
         springCloudVersion = 'Finchley.SR1'
     }
     repositories {
@@ -18,11 +18,12 @@ allprojects {
     apply plugin: 'jacoco'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
-    //apply plugin: 'org.flywaydb.flyway'
 
     group = 'com.thoughtworks'
-    version = '1.0-SNAPSHOT'
+    version = '1.0'
     sourceCompatibility = 1.8
+
+    jar.enabled(true)
 
     repositories {
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
