--- a/eureka/Dockerfile
+++ b/eureka/Dockerfile
@@ -1,5 +1,5 @@
 FROM java:openjdk-8u111
 MAINTAINER huangyong yong.huang1@thoughtworks.com
-COPY build/libs/*.jar /app.jar
+COPY build/libs/eureka-1.0.jar /eureka.jar
 EXPOSE 8761
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "eureka.jar"]
