--- a/eureka/build.gradle
+++ b/eureka/build.gradle
@@ -1,3 +1,21 @@
 dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-server')
 }
+
+jar {
+    baseName("eureka")
+    version("1.0")
+//    manifest {
+//        attributes(
+//                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+//                'Main-Class': 'com.thoughtworks.EurekaApplication'
+//        )
+//    }
+}
+
+tasks.withType(Jar) {
+    manifest {
+        attributes["Main-Class"] = "com.thoughtworks.EurekaApplication"
+    }
+    destinationDir = file("$rootDir/eureka/build/libs")      //$rootDir 取项目的顶级目录
+}
