--- a/user/build.gradle
+++ b/user/build.gradle
@@ -12,3 +12,12 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
+
+jar {
+    baseName("user")
+    version("1.0")
+}
+
+tasks.withType(Jar) {
+    destinationDir = file("$rootDir/user/build/libs")      //$rootDir 取项目的顶级目录
+}
