--- a/eureka/build.gradle
+++ b/eureka/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-server')
+    implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-server')
 }
 
 jar {
